# https-github.com-objectcomputing-eosio-contrib

./: .gitignore
plugins/: CMakeLists.txt
plugins/launcher_plugin/: CMakeLists.txt  eosd_def.cpp  host_def.cpp  launcher_def.cpp  launcher_plugin.cpp
plugins/launcher_plugin/include/eosio/launcher_plugin/: eosd_def.hpp  host_def.hpp  launcher_def.hpp  launcher_defines.hpp  launcher_plugin.hpp
programs/eosio-launcher/: CMakeLists.txt  config.hpp.in  main.cpp
